<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <!-- Navigation for previous and next buttons -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_weight="0.25"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/drugOnePageBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/back"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:background="@drawable/my_button_blue"
            />

        <Button
            android:id="@+id/drugOnePageNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/next"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:background="@drawable/my_button_green"
            />

    </GridLayout>

    <!-- A scrollable view of required fields for the drug one parameters -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/drugOneNameLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_drug_1"
                android:textSize="24sp"
                />

            <AutoCompleteTextView
                android:id="@+id/drugOneNameTextView"
                android:layout_width="165sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/edit_text_style"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/drugOneTreatmentFailurePercentLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treatment_failure_percent"
                android:textSize="24sp"
                android:paddingTop="10dp"
                />

            <EditText
                android:layout_width="275sp"
                android:layout_height="wrap_content"
                android:id="@+id/drugOneTreatmentFailurePercentEditText"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text_style"
                android:textSize="20sp"
                android:hint="@string/percent_placeholder"
                />

            <TextView
                android:id="@+id/drugOneCaseFatalityRiskLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_fatality_rate"
                android:textSize="24sp"
                android:paddingTop="10dp"
                />

            <EditText
                android:id="@+id/drugOneCaseFatalityRiskEditText"
                android:layout_width="195sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text_style"
                android:textSize="20sp"
                android:hint="@string/percent_placeholder"
                />

            <TextView
                android:id="@+id/drugOneCostOfTreatmentLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost_of_treatment"
                android:textSize="24sp"
                android:paddingTop="10dp"
                />

            <EditText
                android:id="@+id/drugOneCostOfTreatmentEditText"
                android:layout_width="195sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text_style"
                android:textSize="20sp"
                android:hint="@string/cost_of_treatment_placeholder"
                />

            <TextView
                android:id="@+id/drugOneChronicPercentLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chronic_percentage"
                android:textSize="24sp"
                android:paddingTop="10dp"
                />

            <EditText
                android:id="@+id/drugOneChronicPercentEditText"
                android:layout_width="210sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text_style"
                android:textSize="20sp"
                android:hint="@string/percent_placeholder"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>